package main

import (
	"context"
	"errors"
	"fmt"
	"log"
	"net"
	"os"
	"os/signal"
	"slices"
	"sync"
	"syscall"
	"time"

	"github.com/brianvoe/gofakeit/v7"
	"github.com/google/uuid"
	"google.golang.org/grpc"
	"google.golang.org/grpc/codes"
	"google.golang.org/grpc/reflection"
	"google.golang.org/grpc/status"
	"google.golang.org/protobuf/types/known/timestamppb"

	inventoryV1 "github.com/Igorezka/rocket-factory/shared/pkg/proto/inventory/v1"
)

const grpcPort = 50051

var ErrPartNotFound = errors.New("part not found")

type InventoryStorage interface {
	Part(partUuid string) (*inventoryV1.Part, error)
	Parts(filter *inventoryV1.PartsFilter) ([]*inventoryV1.Part, error)
}

// InventoryStorageInMem –ø—Ä–µ–¥—Å—Ç–∞–≤–ª—è–µ—Ç –ø–æ—Ç–æ–∫–æ–±–µ–∑–æ–ø–∞—Å–Ω–æ–µ —Ö—Ä–∞–Ω–∏–ª–∏—â–µ –¥–∞–Ω–Ω—ã—Ö –æ –¥–µ—Ç–∞–ª—è—Ö
type InventoryStorageInMem struct {
	mu    sync.RWMutex
	parts map[string]*inventoryV1.Part
}

// Part –≤–æ–∑–≤—Ä–∞—â–∞–µ—Ç –¥–µ—Ç–∞–ª—å –ø–æ uuid
func (s *InventoryStorageInMem) Part(partUuid string) (*inventoryV1.Part, error) {
	s.mu.RLock()
	defer s.mu.RUnlock()

	part, ok := s.parts[partUuid]
	if !ok {
		return nil, ErrPartNotFound
	}

	return part, nil
}

// Parts –≤–æ–∑–≤—Ä–∞—â–∞–µ—Ç –¥–µ—Ç–∞–ª–∏ –æ—Ç—Ñ–∏–ª—å—Ç—Ä–æ–≤–∞–Ω–Ω—ã–µ –≤ —Å–æ–æ—Ç–≤–µ—Ç—Å—Ç–≤–∏–∏ —Å –ø–µ—Ä–µ–¥–∞–Ω–Ω—ã–º —Ñ–∏–ª—å—Ç—Ä–æ–º
func (s *InventoryStorageInMem) Parts(filter *inventoryV1.PartsFilter) ([]*inventoryV1.Part, error) {
	s.mu.RLock()
	parts := s.parts
	s.mu.RUnlock()

	type filterFunc func(part *inventoryV1.Part) bool

	// –°–ø–∏—Å–æ–∫ —Ñ–∏–ª—å—Ç—Ä–æ–≤, –µ—Å–ª–∏ —Ñ–∏–ª—å—Ç—Ä –Ω–µ –±—ã–ª –ø–µ—Ä–µ–¥–∞–Ω –¥–µ—Ç–∞–ª—å –∞–≤—Ç–æ–º–∞—Ç–∏—á–µ—Å–∫–∏ —Å–æ–æ—Ç–≤–µ—Ç—Å—Ç–≤—É–µ—Ç –µ–º—É
	filters := []filterFunc{
		func(part *inventoryV1.Part) bool {
			if len(filter.GetUuids()) == 0 {
				return true
			}
			return slices.Contains(filter.GetUuids(), part.Uuid)
		},
		func(part *inventoryV1.Part) bool {
			if len(filter.GetNames()) == 0 {
				return true
			}
			return slices.Contains(filter.GetNames(), part.Name)
		},
		func(part *inventoryV1.Part) bool {
			if len(filter.GetCategories()) == 0 {
				return true
			}
			return slices.Contains(filter.GetCategories(), part.Category)
		},
		func(part *inventoryV1.Part) bool {
			if len(filter.GetManufacturerCountries()) == 0 {
				return true
			}
			return slices.Contains(filter.GetManufacturerCountries(), part.Manufacturer.Country)
		},
		func(part *inventoryV1.Part) bool {
			if len(filter.GetTags()) == 0 {
				return true
			}

			if len(part.Tags) == 0 {
				return false
			}
			for _, tag := range filter.GetTags() {
				if slices.Contains(part.Tags, tag) {
					return true
				}
			}
			return false
		},
	}

	filteredParts := make([]*inventoryV1.Part, 0)
	for _, part := range parts {
		match := false
		for _, f := range filters {
			if !f(part) {
				match = false
				continue
			}
			match = true
		}
		if match {
			filteredParts = append(filteredParts, part)
		}
	}

	if len(filteredParts) == 0 {
		return nil, ErrPartNotFound
	}

	return filteredParts, nil
}

// inventoryService —Ä–µ–∞–ª–∏–∑—É–µ—Ç gRPC —Å–µ—Ä–≤–∏—Å –¥–ª—è —Ä–∞–±–æ—Ç—ã —Å –¥–µ—Ç–∞–ª—è–º–∏
type inventoryService struct {
	inventoryV1.UnimplementedInventoryServiceServer
	storage InventoryStorage
}

// GetPart –≤–æ–∑–≤—Ä–∞—â–∞–µ—Ç –¥–µ—Ç–∞–ª—å –ø–æ UUID
func (s *inventoryService) GetPart(_ context.Context, req *inventoryV1.GetPartRequest) (*inventoryV1.GetPartResponse, error) {
	part, err := s.storage.Part(req.GetUuid())
	if err != nil {
		if errors.Is(err, ErrPartNotFound) {
			return nil, status.Errorf(codes.NotFound, "part with UUID %s not found", req.GetUuid())
		}

		return nil, status.Error(codes.Internal, "internal error")
	}

	return &inventoryV1.GetPartResponse{
		Part: part,
	}, nil
}

// ListParts –≤–æ–∑–≤—Ä–∞—â–∞–µ—Ç —Å–ø–∏—Å–æ–∫ –¥–µ—Ç–∞–ª–µ–π —Å–æ–æ—Ç–≤–µ—Ç—Å—Ç–≤—É—é—â–∏—Ö –ø–µ—Ä–µ–¥–∞–Ω–Ω—ã–º —Ñ–∏–ª—å—Ç—Ä–∞–º
// –∏–ª–∏ –≤–æ–∑–≤—Ä–∞—â–∞–µ—Ç –≤—Å–µ –¥–µ—Ç–∞–ª–∏ –µ—Å–ª–∏ —Ñ–∏–ª—å—Ç—Ä—ã –Ω–µ –ø–µ—Ä–µ–¥–∞–Ω—ã
func (s *inventoryService) ListParts(_ context.Context, req *inventoryV1.ListPartsRequest) (*inventoryV1.ListPartsResponse, error) {
	parts, err := s.storage.Parts(req.GetFilter())
	if err != nil {
		if errors.Is(err, ErrPartNotFound) {
			return nil, status.Error(codes.NotFound, "no parts found")
		}

		return nil, status.Error(codes.Internal, "internal error")
	}

	return &inventoryV1.ListPartsResponse{
		Parts: parts,
	}, nil
}

func main() {
	lis, err := net.Listen("tcp", fmt.Sprintf(":%d", grpcPort))
	if err != nil {
		log.Printf("failed to listen: %v", err)
	}
	defer func() {
		if cerr := lis.Close(); cerr != nil {
			log.Printf("failed to close listener: %v\n", cerr)
		}
	}()

	// –°–æ–∑–¥–∞–µ–º —Ö—Ä–∞–Ω–∏–ª–∏—â–µ
	storage := &InventoryStorageInMem{
		parts: fillTestData(4),
	}

	// –°–æ–∑–¥–∞–µ–º gRPC —Å–µ—Ä–≤–µ—Ä
	s := grpc.NewServer()

	// –†–µ–≥–∏—Å—Ç—Ä–∏—Ä—É–µ–º —Å–µ—Ä–≤–∏—Å –∏ –∑–∞–ø–æ–ª–Ω—è–µ–º —Ç–µ—Å—Ç–æ–≤—ã–µ –¥–µ—Ç–∞–ª–∏
	service := &inventoryService{
		storage: storage,
	}

	inventoryV1.RegisterInventoryServiceServer(s, service)

	// –í–∫–ª—é—á–∞–µ–º —Ä–µ—Ñ–ª–µ–∫—Å–∏—é –¥–ª—è –æ—Ç–ª–∞–¥–∫–∏
	reflection.Register(s)

	go func() {
		log.Printf("üöÄ gRPC server listening on %d\n", grpcPort)
		err = s.Serve(lis)
		if err != nil {
			log.Printf("failed to serve: %v\n", err)
			return
		}
	}()

	// Graceful shutdown
	quit := make(chan os.Signal, 1)
	signal.Notify(quit, syscall.SIGINT, syscall.SIGTERM)
	<-quit
	log.Println("üõë Shutting down gRPC server...")
	s.GracefulStop()
	log.Println("‚úÖ Server stopped")
}

// fillTestData –≥–µ–Ω–µ—Ä–∏—Ä—É–µ—Ç —Ç–µ—Å—Ç–æ–≤—ã–µ –¥–∞–Ω–Ω—ã–µ
func fillTestData(count int) map[string]*inventoryV1.Part {
	data := make(map[string]*inventoryV1.Part)

	for i := 0; i < count; i++ {
		id := uuid.NewString()
		// –°–¥–µ–ª–∞–ª —Ç–∞–∫ –ø–æ—Ç–æ–º—É —á—Ç–æ –ª–∏–Ω—Ç–µ—Ä –ø—Ä–∏ –∏—Å–ø–æ–ª—å–∑–æ–≤–∞–Ω–∏–∏ inventoryV1.Category(gofakeit.IntRange(0, 4))
		// –≤—ã–∫–∏–¥—ã–≤–∞–µ—Ç –æ—à–∏–±–∫—É gosec G115 int <- int32
		category := func() inventoryV1.Category {
			c := gofakeit.IntRange(0, 4)

			switch c {
			case 1:
				return inventoryV1.Category_CATEGORY_ENGINE
			case 2:
				return inventoryV1.Category_CATEGORY_FUEL
			case 3:
				return inventoryV1.Category_CATEGORY_PORTHOLE
			case 4:
				return inventoryV1.Category_CATEGORY_WING
			}

			return inventoryV1.Category_CATEGORY_UNKNOWN_UNSPECIFIED
		}()

		part := &inventoryV1.Part{
			Uuid:          id,
			Name:          gofakeit.Name(),
			Description:   gofakeit.Name(),
			Price:         gofakeit.Float64(),
			StockQuantity: gofakeit.Int64(),
			Category:      category,
			Dimensions: &inventoryV1.Dimensions{
				Length: gofakeit.Float64(),
				Width:  gofakeit.Float64(),
				Height: gofakeit.Float64(),
				Weight: gofakeit.Float64(),
			},
			Manufacturer: &inventoryV1.Manufacturer{
				Name:    gofakeit.Company(),
				Country: gofakeit.Country(),
				Website: gofakeit.URL(),
			},
			Tags: []string{gofakeit.Name(), gofakeit.Company(), gofakeit.Country()},
			Metadata: map[string]*inventoryV1.Value{
				"name": {
					ValueType: &inventoryV1.Value_StringValue{StringValue: gofakeit.Name()},
				},
			},
			CreatedAt: timestamppb.New(time.Now()),
		}
		data[id] = part
	}

	return data
}
